#un comment it if you just build pure cmake project
# Where to put all the LIBRARY target files when built.
#PROJECT_SOURCE_DIR is  = ~/Documents/my_project/AVP-Binding
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
#add_library(app SHARED
#        ORBextractor.cpp
#        System.cpp
#        SparsePipeline.cpp
#        Frame.cpp
#        Delaunay.hpp
#        Visualization.cpp
#        Mat_Wraper.cpp
#        Converter.cpp)
#
#target_link_libraries(app
#        ${OpenCV_LIBS}
#        ${EIGEN3_LIBS}
#        )

